--- a/index.html
+++ b/index.html
@@ -88,30 +88,32 @@
                 margin-bottom: 10px;
                 border: 10p;">
         <h1 style="text-align: center;">Inverted index</h1>
-        <img src="1.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;"">
+        <img src="1.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
     </div>
     <div style=" width: 100% ; border-bottom: dashed 5px; margin-bottom: 10px; border: 10p;">
         <h1 style="text-align: center;">Tf-Idf</h1>
-        <img src="2_1.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;"">
-        <img src=" 2_2.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;"">
-        <img src=" 2_3.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;"">
+        <img src="2_1.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
+        <img src=" 2_2.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
+        <img src=" 2_3.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
     </div>
     <div style=" width: 100% ; border-bottom: dashed 5px; margin-bottom: 10px; border: 10p;">
         <h1 style="text-align: center;">Extended query</h1>
-        <img src=" 3.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;"">
+        <img src="3.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
+        <img src=" 3_1.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
+
     </div>
     <div style=" width: 100% ; border-bottom: dashed 5px; margin-bottom: 10px; border: 10p;">
         <h1 style="text-align: center;">Relevance Feedback</h1>
-        <img src="4.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;"">
+        <img src="4.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
     </div>
     <div style=" width: 100% ; border-bottom: dashed 5px; margin-bottom: 10px; border: 10p;">
         <h1 style="text-align: center;">The technologies we used are</h1>
-        <img src="5.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;"">
+        <img src="5.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
     </div>
     <div style=" width: 100% ; border-bottom: dashed 5px; margin-bottom: 10px; border: 10p;">
         <h1 style="text-align: center;">Query Execution Info</h1>
 
-        <img src="6.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;"">
+        <img src="6.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
     </div>
 
     <div style=" width: 100% ; border-bottom: dashed 5px; margin-bottom: 10px; border: 10p;">
@@ -128,7 +130,7 @@
 
     <div style=" width: 100% ; border-bottom: dashed 5px; margin-bottom: 10px; border: 10p;">
         <h1 style="text-align: center;">Challenges</h1>
-        <img src="8.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;"">
+        <img src="8.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
     </div>
 
 </body>
