--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
         <h1 style="text-align: center;">Extended query</h1>
         <img src="3.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
         <img src="3_1.png" style="max-width: 100%;height: auto;display: block;margin-left: auto;margin-right: auto;">
-
+        <h1 style="direction: rtl;">אנחנו לא חושבים שיש אפשרות להתאים את השאילתה ולשפר אותה ,
+            המידע באתר מאוד מבולגן , יש באתר המון כפפות וכל כפפה מוצגת בצורה אחרת , אין מבנה אחיד בכלל .
+        </h1>
     </div>
     <div style=" width: 100% ; border-bottom: dashed 5px; margin-bottom: 10px; border: 10p;">
         <h1 style="text-align: center;">Relevance Feedback</h1>
